fixed some color contrast

--- a/app/assets/stylesheets/month_table.scss
+++ b/app/assets/stylesheets/month_table.scss
@@ -137,7 +137,8 @@
 }
 
 .group_3 {
-  --bs-table-bg: #f00;
+  --bs-table-bg: #{$red-500};
+  color: white;
 }
 
 .group_4 {
